--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
 
 
 
-    url: jdbc:mysql://hkg1.clusters.zeabur.com:32133/db1
+    url: jdbc:mysql://hkg1.clusters.zeabur.com:32133
     username: root
     password: bWGuIoyQkEp69PLz4m5XMH07V382nSB1
     driver-class-name: com.mysql.cj.jdbc.Driver
